tests/build/cases/widget_new/incorrect_arg_type1.stderr
error[E0277]: the trait bound `bool: IntoVar<SideOffsets>` is not satisfied
 --> cases/widget_new/incorrect_arg_type1.rs:7:16
  |
7 |         margin = true
  |         ------ ^ the trait `IntoVar<SideOffsets>` is not implemented for `bool`
  |         |
  |         required by a bound introduced by this call
  |
  = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `margin::__new__`
 --> $WORKSPACE/zero-ui/src/properties/layout.rs
  |
  | pub fn margin(child: impl UiNode, margin: impl IntoVar<SideOffsets>) -> impl UiNode {
  |                                                ^^^^^^^^^^^^^^^^^^^^ required by this bound in `margin::__new__`
